k8s/mysql-service-h.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-h # nome tem que ser igual ao serviceName: mysql-h do arquivo statefulset
spec:
  selector:
    app: mysql
  ports:
    - port: 3306
  clusterIP: None
