k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-host
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt"
    ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  rules:
    - host: "mwacha.tk"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: springbootserver-service
                port:
                  number: 80
  tls:
    - hosts:
      - "mwacha.tk"
      secretName: letsencrypt-tls
